# gpu-external-power-supply

./: .gitignore  readme.md
firmware/: Cargo.toml  memory.x  shell.nix
firmware/.cargo/: config.toml
firmware/examples/: boot_clear.rs
firmware/src/: main.rs  navigation.rs  vrm_controller.rs
hardware/: #auto_saved_files#  12V_Supply.kicad_sch  12V_Supply.kicad_sch-bak  Computer_Control.kicad_sch  Double_Mos.kicad_sch  Low_Current_Supply.kicad_sch  Onboard_Control.kicad_sch  Symbol_Library.kicad_sym  U_Controller.kicad_sch  VRM_Controller.kicad_sch  Vcore_Stage.kicad_sch  Vmem_Stage.kicad_sch  fp-lib-table  gpu-external-power-supply-all-pos.csv  gpu-external-power-supply.csv  gpu-external-power-supply.kicad_pcb  gpu-external-power-supply.kicad_prl  gpu-external-power-supply.kicad_pro  gpu-external-power-supply.kicad_sch  sym-lib-table
hardware/work.pretty/: 12402012E212A_AMP.kicad_mod  AOZ5276QI.kicad_mod  CNC_3221-10-0100-00.kicad_mod  CONN_55690007-SD_06_MOL.kicad_mod  CONN_PPTC041LFBN-RC_SUL.kicad_mod  CUI_UJ20-C-H-C-4-SMT-TR.kicad_mod  IND-SMD_L7.2-W6.6_GPSR07X0.kicad_mod  IND_IFLR4031GCERR17M01_VIS.kicad_mod  IND_IHVR-4025JZ-3Z_VIS.kicad_mod  KEY-SMD_4P-L6.0-W6.0-P3.90-LS9.0.kicad_mod  LQFP-64_STM.kicad_mod  OC_Club_Logo.kicad_mod  P25_DO-214AC_SMA.kicad_mod  PCIe_2x3_Conn_Header.kicad_mod  QFN48_6X6_TEX.kicad_mod  SOD123_DIO.kicad_mod  SW-SMD_K3-1280S-K1.kicad_mod  SW_TS02-66-70-BK-160-LCR-D.kicad_mod  USB-C_SMD-TYPE-C-31-M-12.kicad_mod
prints/: DisplayColumn.stl
