[package]
name = "gpu-external-power-supply-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.5"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
nb = "1.1.0"
panic-halt = "1.0.0"
ssd1306 = "0.9.0"

[dependencies.stm32c0xx-hal]
git = "https://github.com/starboundstitch/stm32c0xx-hal/"
features = ["stm32c071", "rt"]
