[package]
name = "gpu-external-power-supply-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embedded-graphics = "0.8.1"
nb = "1.1.0"
panic-halt = "1.0.0"
panic-semihosting = "0.6.0"
ssd1306 = "0.9.0"

[dependencies.embedded-hal]
version = "1.0.0"
features = [ "defmt-03" ]

[dependencies.lexical-core]
version = "^1.0"
default-features = false
features = [ "write-integers", "write-floats" ]

[dependencies.stm32f4xx-hal]
version = "0.22.1"
features = [ "stm32f401" ]
